@@ -202,7 +202,7 @@
 
 <addon id="script.lrclyrics"
        name="LRC Lyrics"
-       version="1.3.0"
+       version="1.3.1"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
