@@ -10,7 +10,7 @@ __scriptid__ = "script.lrclyrics"
 __author__ = "Taxigps"
 __url__ = "http://code.google.com/p/xbmc-scripting/"
 __credits__ = "EnderW,Nuka1195"
-__version__ = "1.3.0"
+__version__ = "1.3.1"
 __XBMC_Revision__ = "30001"
 
 # Shared resources 
